package carmenSandiego.modelo;

public interface EstadoJugador {

    void pasarTiempo(Tiempo reloj);

}
